@@ -8,6 +8,7 @@ documents those changes that are of interest to users and administrators.
     a heterogeneous job as soon as all of its components are determined able to
     do so.
  -- Fix underflow causing decay thread to exit.
+ -- Fix main scheduler not considering hetjobs when building the job queue.
 
 * Changes in Slurm 18.08.6-2
 ============================
